2014-07-14  Roberto Reale  <roberto.reale82@gmail.com>

	* wsync (LocalCopy.sync): Removed spurious call to read().
	(LocalCopy.write_file): Added `+' to call() mode.

2014-07-14  Roberto Reale  <roberto.reale82@gmail.com>

	* wsync: Implemented support for YAML configuration files.

2014-07-14  Roberto Reale  <roberto.reale82@gmail.com>

	* wsync: HTTP requests are now handled through Kenneth Reitz's
	``requests'' module.

2014-07-11  Roberto Reale  <roberto.reale82@gmail.com>

	* wsync: Rewritten using iterators and object inheritance.  Added
	main() and command-line arguments parsing.

2014-07-10  Roberto Reale  <roberto.reale82@gmail.com>

	* wsync: A bunch of small improvements.  Depends upon the
	CheckableString package.